==> darkspr1te/nand_flasher/Core/Src/fsmc_nand.c <==
#include "fsmc_nand.h"
#include "log.h"
#include "stm32f4xx_hal.h"
#include "stm32f4xx_hal_nand.h"
#define CMD_AREA                   (uint32_t)(1<<16)  /* A16 = CLE  high */
#define ADDR_AREA                  (uint32_t)(1<<17)  /* A17 = ALE high */
#define DATA_AREA                  ((uint32_t)0x00000000)
#define NAND_ERROR                 ((uint32_t)0x00000001)
#define NAND_READY                 ((uint32_t)0x00000040)
#define ADDR_1st_CYCLE(ADDR)       (uint8_t)((ADDR)& 0xFF)
#define ADDR_2nd_CYCLE(ADDR)       (uint8_t)(((ADDR)& 0xFF00) >> 8)
#define ADDR_3rd_CYCLE(ADDR)       (uint8_t)(((ADDR)& 0xFF0000) >> 16)
#define ADDR_4th_CYCLE(ADDR)       (uint8_t)(((ADDR)& 0xFF000000) >> 24)
#define FSMC_Bank_NAND     FSMC_Bank2_NAND
#define Bank_NAND_ADDR     Bank2_NAND_ADDR
#define Bank2_NAND_ADDR    ((uint32_t)0x70000000)
#define ROW_ADDRESS (addr.page + (addr.block + (addr.zone * NAND_ZONE_SIZE)) * \
    NAND_BLOCK_SIZE)
#define UNDEFINED_CMD 0xFF

static void nand_gpio_init(void)
{
    GPIO_InitTypeDef GPIO_InitStruct;
  
  
  

#if defined (STM32F407xx)

  
 __HAL_RCC_GPIOE_CLK_ENABLE();
  __HAL_RCC_GPIOD_CLK_ENABLE();
  __HAL_RCC_GPIOG_CLK_ENABLE();
  __HAL_RCC_GPIOF_CLK_ENABLE();
  /* Peripheral clock enable */
  __HAL_RCC_FSMC_CLK_ENABLE();

  /** FSMC GPIO Configuration
  PE7   ------> FSMC_D4
  PE8   ------> FSMC_D5
  PE9   ------> FSMC_D6
  PE10   ------> FSMC_D7
  PD11   ------> FSMC_CLE
  PD12   ------> FSMC_ALE
  PD14   ------> FSMC_D0
  PD15   ------> FSMC_D1
  PG6   ------> FSMC_INT2
  PD0   ------> FSMC_D2
  PD1   ------> FSMC_D3
  PD4   ------> FSMC_NOE
  PD5   ------> FSMC_NWE
  PD7   ------> FSMC_NCE2
  */
  GPIO_InitStruct.Pin = GPIO_PIN_7|GPIO_PIN_8|GPIO_PIN_9|GPIO_PIN_10;
  GPIO_InitStruct.Mode = GPIO_MODE_AF_PP;
  GPIO_InitStruct.Pull = GPIO_NOPULL;
  GPIO_InitStruct.Speed = GPIO_SPEED_FREQ_VERY_HIGH;
  GPIO_InitStruct.Alternate = GPIO_AF12_FSMC;
  HAL_GPIO_Init(GPIOE, &GPIO_InitStruct);

  GPIO_InitStruct.Pin = GPIO_PIN_11|GPIO_PIN_12|GPIO_PIN_14|GPIO_PIN_15
                          |GPIO_PIN_0|GPIO_PIN_1|GPIO_PIN_4|GPIO_PIN_5
                          |GPIO_PIN_7;
  GPIO_InitStruct.Mode = GPIO_MODE_AF_PP;
  GPIO_InitStruct.Pull = GPIO_NOPULL;
  GPIO_InitStruct.Speed = GPIO_SPEED_FREQ_VERY_HIGH;
  GPIO_InitStruct.Alternate = GPIO_AF12_FSMC;
  HAL_GPIO_Init(GPIOD, &GPIO_InitStruct);

  GPIO_InitStruct.Pin = GPIO_PIN_6;
  GPIO_InitStruct.Mode = GPIO_MODE_AF_PP;
  GPIO_InitStruct.Pull = GPIO_PULLUP;
  GPIO_InitStruct.Speed = GPIO_SPEED_FREQ_VERY_HIGH;
  GPIO_InitStruct.Alternate = GPIO_AF12_FSMC;
  HAL_GPIO_Init(GPIOG, &GPIO_InitStruct);
#else
 
 
 __HAL_RCC_GPIOE_CLK_ENABLE();
  __HAL_RCC_GPIOD_CLK_ENABLE();  

  /* Peripheral clock enable */
  __HAL_RCC_FSMC_CLK_ENABLE();

  /** FSMC GPIO Configuration
  PE7   ------> FSMC_D4
  PE8   ------> FSMC_D5
  PE9   ------> FSMC_D6
  PE10   ------> FSMC_D7
  PD11   ------> FSMC_CLE
  PD12   ------> FSMC_ALE
  PD14   ------> FSMC_D0
  PD15   ------> FSMC_D1
  PG6   ------> FSMC_INT2
  PD0   ------> FSMC_D2
  PD1   ------> FSMC_D3
  PD4   ------> FSMC_NOE
  PD5   ------> FSMC_NWE
  PD7   ------> FSMC_NCE2
  */
  GPIO_InitStruct.Pin =   GPIO_PIN_11 | GPIO_PIN_12 | GPIO_PIN_14 | GPIO_PIN_15 |
             GPIO_PIN_0 | GPIO_PIN_1 | GPIO_PIN_4 | GPIO_PIN_5 | GPIO_PIN_7;

  GPIO_InitStruct.Mode = GPIO_MODE_AF_PP;
  GPIO_InitStruct.Pull = GPIO_NOPULL;
  GPIO_InitStruct.Speed = GPIO_SPEED_FREQ_HIGH;
  //GPIO_InitStruct.Alternate = GPIO_AF12_FSMC;
  HAL_GPIO_Init(GPIOD, &GPIO_InitStruct);

  GPIO_InitStruct.Pin = GPIO_PIN_7 | GPIO_PIN_8 | GPIO_PIN_9 | GPIO_PIN_10;
  GPIO_InitStruct.Mode = GPIO_MODE_AF_PP;
  GPIO_InitStruct.Pull = GPIO_NOPULL;
  GPIO_InitStruct.Speed = GPIO_SPEED_FREQ_HIGH;
  //GPIO_InitStruct.Alternate = GPIO_AF12_FSMC;
 // HAL_GPIO_Init(GPIOE, &GPIO_InitStruct);

  
  
  //  RCC_APB2PeriphClockCmd(RCC_APB2Periph_GPIOD | RCC_APB2Periph_GPIOE | 
    //    RCC_APB2Periph_GPIOF | RCC_APB2Periph_GPIOG, ENABLE);
  
    /* CLE, ALE, D0->D3, NOE, NWE and NCE2 NAND pin configuration */
  /*  gpio_init.GPIO_Pin = GPIO_PIN_11 | GPIO_PIN_12 | GPIO_PIN_14 | GPIO_PIN_15 |
        GPIO_PIN_0 | GPIO_PIN_1 | GPIO_PIN_4 | GPIO_PIN_5 | GPIO_PIN_7;
    gpio_init.GPIO_Speed = GPIO_SPEED_HIGH;
    gpio_init.GPIO_Mode = GPIO_MODE_AF_PP;
    GPIO_Init(GPIOD, &gpio_init);
*/
    /* D4->D7 NAND pin configuration */  
  //  gpio_init.GPIO_Pin = GPIO_PIN_7 | GPIO_PIN_8 | GPIO_PIN_9 | GPIO_PIN_10;
   // GPIO_Init(GPIOE, &gpio_init);

    /* NWAIT NAND pin configuration */
    //gpio_init.GPIO_Pin = GPIO_PIN_6;
    //gpio_init.GPIO_Speed = GPIO_Speed_50MHz;
    //gpio_init.GPIO_Mode = GPIO_Mode_IPU;
    //GPIO_Init(GPIOD, &gpio_init); 

    /* INT2 NAND pin configuration, not available in LQFP100 */
    #if 0
        gpio_init.GPIO_Pin = GPIO_PIN_6;
        GPIO_Init(GPIOG, &gpio_init);
    #endif
#endif
}

static void nand_fsmc_init()
{
  /*  FSMC_NANDInitTypeDef fsmc_init;
    FSMC_NAND_PCCARDTimingInitTypeDef timing_init;

    RCC_AHBPeriphClockCmd(RCC_AHBPeriph_FSMC, ENABLE);

    timing_init.FSMC_SetupTime = fsmc_conf.setup_time;
    timing_init.FSMC_WaitSetupTime = fsmc_conf.wait_setup_time;
    timing_init.FSMC_HoldSetupTime = fsmc_conf.hold_setup_time;
    timing_init.FSMC_HiZSetupTime = fsmc_conf.hi_z_setup_time;

    fsmc_init.FSMC_Bank = FSMC_Bank2_NAND;
    fsmc_init.FSMC_Waitfeature = FSMC_Waitfeature_Enable;
    fsmc_init.FSMC_MemoryDataWidth = FSMC_MemoryDataWidth_8b;
    fsmc_init.FSMC_ECC = FSMC_ECC_Enable;
    fsmc_init.FSMC_ECCPageSize = FSMC_ECCPageSize_2048Bytes;
    fsmc_init.FSMC_TCLRSetupTime = fsmc_conf.clr_setup_time;
    fsmc_init.FSMC_TARSetupTime = fsmc_conf.ar_setup_time;
    fsmc_init.FSMC_CommonSpaceTimingStruct = &timing_init;
    fsmc_init.FSMC_AttributeSpaceTimingStruct = &timing_init;
    FSMC_NANDInit(&fsmc_init);

    FSMC_NANDCmd(FSMC_Bank2_NAND, ENABLE);


     /* USER CODE BEGIN FSMC_Init 0 */

  /* USER CODE END FSMC_Init 0 */
#if defined (STM32F407xx)
  FSMC_NAND_PCC_TimingTypeDef ComSpaceTiming = {0};
  FSMC_NAND_PCC_TimingTypeDef AttSpaceTiming = {0};

  /* USER CODE BEGIN FSMC_Init 1 */

  /* USER CODE END FSMC_Init 1 */

  /** Perform the NAND2 memory initialization sequence
  */
  hnand2.Instance = FSMC_NAND_DEVICE;
  /* hnand2.Init */
  hnand2.Init.NandBank = FSMC_NAND_BANK2;
  hnand2.Init.Waitfeature = FSMC_NAND_PCC_WAIT_FEATURE_DISABLE;
  hnand2.Init.MemoryDataWidth = FSMC_NAND_PCC_MEM_BUS_WIDTH_8;
  hnand2.Init.EccComputation = FSMC_NAND_ECC_DISABLE;
  hnand2.Init.ECCPageSize = FSMC_NAND_ECC_PAGE_SIZE_512BYTE;
  hnand2.Init.TCLRSetupTime = fsmc_conf.clr_setup_time;
  hnand2.Init.TARSetupTime = fsmc_conf.ar_setup_time;
  /* hnand2.Config */
#define NAND_PAGE_SIZE             ((uint16_t)0x0800) /* 2 * 1024 bytes per page w/o Spare Area */
#define NAND_BLOCK_SIZE            ((uint16_t)0x0040) /* 64 pages per block */
#define NAND_ZONE_SIZE             ((uint16_t)0x0400) /* 1024 Block per zone */
#define NAND_SPARE_AREA_SIZE       ((uint16_t)0x0040) /* last 64 bytes as spare area */
#define NAND_MAX_ZONE              ((uint16_t)0x0001) /* 1 zones of 1024 block */
  
  /*hnand2.Config.PageSize = NAND_PAGE_SIZE;
  hnand2.Config.SpareAreaSize = NAND_SPARE_AREA_SIZE;
  hnand2.Config.BlockSize = NAND_BLOCK_SIZE;
  hnand2.Config.BlockNbr = NAND_ZONE_SIZE;
  hnand2.Config.PlaneNbr = NAND_MAX_ZONE;
  hnand2.Config.PlaneSize = 0x840;
  hnand2.Config.ExtraCommandEnable = DISABLE;
  */
 hnand2.Config.PageSize = NAND_PAGE_SIZE;
  hnand2.Config.SpareAreaSize = NAND_SPARE_AREA_SIZE;
  hnand2.Config.BlockSize = NAND_BLOCK_SIZE;
  hnand2.Config.BlockNbr = NAND_ZONE_SIZE;
  hnand2.Config.PlaneNbr = NAND_MAX_ZONE;
  hnand2.Config.PlaneSize = 0x840;
  hnand2.Config.ExtraCommandEnable = DISABLE;
  /* ComSpaceTiming */
  ComSpaceTiming.SetupTime =  fsmc_conf.setup_time;
  ComSpaceTiming.WaitSetupTime = fsmc_conf.wait_setup_time;
  ComSpaceTiming.HoldSetupTime = fsmc_conf.hold_setup_time;
  ComSpaceTiming.HiZSetupTime = fsmc_conf.hi_z_setup_time;
  /* AttSpaceTiming */
  AttSpaceTiming.SetupTime =fsmc_conf.setup_time;
  AttSpaceTiming.WaitSetupTime = fsmc_conf.wait_setup_time;
  AttSpaceTiming.HoldSetupTime = fsmc_conf.hold_setup_time;
  AttSpaceTiming.HiZSetupTime = fsmc_conf.hi_z_setup_time;

  if (HAL_NAND_Init(&hnand2, &ComSpaceTiming, &AttSpaceTiming) != HAL_OK)
  {
    Error_Handler( );
  }
#else

#endif 
}
